--- a/CarFacadetest/CarFacadetest.csproj
+++ b/CarFacadetest/CarFacadetest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{586CA12D-10B3-4347-9E24-2640EBE033CD}</ProjectGuid>
+    <ProjectGuid>{05E23A50-9ED5-44A7-87C3-5C07A5B3E877}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CarFacadeTest</RootNamespace>
-    <AssemblyName>CarFacadeTest</AssemblyName>
+    <RootNamespace>CarFacadetest</RootNamespace>
+    <AssemblyName>CarFacadetest</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -48,7 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WheelSystemTest.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
